src/index.css
/* ... */
@media (max-width: 768px) {
  .menu-toggle {
    display: flex;
    justify-content: flex-end;
  }

  .main-menu ul {
    display: flex;
    flex-direction: column;
  }

  .main-menu li a {
    padding: 10px;
    font-size: 1.1rem;
  }

  .submenu-toggle {
    display: inline-block;
  }

  .submenu,
  .subsubmenu {
    position: static;
    box-shadow: none;
  }

  .submenu.open,
  .subsubmenu.open {
    display: block;
  }
}

@media screen and (max-width: 1199px) {
  .menu-toggle {
    background: none;
    border: none;
    cursor: pointer;
    text-align: right;
    padding-right: 1rem;
  }

  .menu-toggle svg {
    width: 32px;
    fill: #fff;
    stroke: #fff;
  }

  .menu-and-search {
    display: none;
    background: #fff;
    margin: 0;
  }
  .auth-nav {
    padding: 2rem 1rem;
    background: var(--primary-color);
  }
  .menu-and-search.open {
    display: block;
  }
  .main-menu a {
    color: #000;
    padding: 0.75rem 1rem;
  }
  .main-header ul {
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: 0;
    margin: 0;
    padding: 0;
  }
  .main-header li {
    border: 1px solid #f8f9fa;
  }
}

.swiper {
  padding-bottom: 20px !important;
  position: relative !important;
}

/* Add to your global CSS or inside a module */
.swiper-scrollbar {
  /* background-color: #1e293b; track color */
  background: linear-gradient(to right, #4575ff, #92aeff) !important;
  height: 6px !important;
  border-radius: 8px !important;
  position: absolute !important;
  bottom: 0px !important; /* control position */
  z-index: 999 !important;
  cursor: pointer;
}

.swiper-scrollbar-drag {
  background: linear-gradient(to right, #4575ff, #92aeff); /* thumb */
  border-radius: 8px;
}
/* @media (min-width: 1024px) {
  .container {
    padding-left: 5rem;
    padding-right: 5rem;
    margin: auto;
  }
} */

.container {
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  padding-right: 1rem /* 16px */;
  padding-left: 1rem /* 16px */;
}
@media (min-width: 640px) {
  .container {
    max-width: 640px;
    padding: 0 2rem;
  }
}
@media (min-width: 768px) {
  .container {
    max-width: 768px;
    padding: 0 3rem;
  }
}
@media (min-width: 1024px) {
  .container {
    max-width: 1024px;
    padding: 0 4rem;
  }
}
@media (min-width: 1280px) {
  .container {
    max-width: 1280px;
    padding: 0 5rem;
  }
}
@media (min-width: 1536px) {
  .container {
    max-width: 1536px;
    padding: 0 5rem;
  }
}
@media (min-width: 1800px) {
  .container {
    max-width: 1800px;
    padding: 0 5rem;
  }
}

